--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "ember-data": "github:emberjs/data#2b89fe3178751a62863861cd486358de46eed641",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
+    "ember-math-helpers": "^2.10.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.1.2",
     "ember-resolver": "^5.1.3",
     "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/canary/shas/8174b88639c760b7bb53b5f3ea3d3a72b9e6ca1c.tgz",
+    "ember-truth-helpers": "^2.1.0",
     "eslint-plugin-ember": "^6.0.1",
     "eslint-plugin-node": "^8.0.1",
     "loader.js": "^4.7.0",
