--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@ember/optional-features": "^0.7.0",
     "@ember/render-modifiers": "^1.0.0",
+    "@fortawesome/ember-fontawesome": "^0.1.13",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@glimmer/component": "^0.14.0-alpha.3",
     "babel-eslint": "^8.0.2",
     "broccoli-asset-rev": "^3.0.0",
